// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard test should render correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        product
      </h2>
      <div
        class="product-card__description"
      >
        good
      </div>
      <h1
        class="product-card__price"
      >
        1 $
      </h1>
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductCard test should render correctly with img 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        product
      </h2>
      <div
        class="product-card__description"
      >
        good
      </div>
      <h1
        class="product-card__price"
      >
        1 $
      </h1>
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
    <img
      alt="product"
      class="product-card__image"
      src="/iphone.png"
    />
  </div>
</DocumentFragment>
`;
